<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/light_grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:textSize="24sp"
        android:textStyle="italic"
        style="@style/myRulesStyle"/>

    <GridLayout
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:rowCount="1"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />


    </GridLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/back"/>



</RelativeLayout>